# relace-sdk

./: .gitignore  .oxlintrc.json  .prettierignore  README.md  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
python/examples/: 01_create_repo.py  02_file_ops.py  03_update_and_clone.py  04_ai_interactions.py  05_chat_and_git.py
python/relace_agent_client/: __init__.py
python/relace_agent_client/api/default/: ask_question_repo_repo_id_ask_post.py  (+22 more)
python/relace_agent_client/models/: __init__.py  agent_event.py  build_event.py  build_event_event.py  committed_event.py  deployed_event.py  done_event.py  file.py  file_delete_operation.py  file_rename_operation.py  file_write_operation.py  list_repo_metadata_order_by.py  list_repo_metadata_repo_get_order_by.py  paged_response_repo_log_item.py  paged_response_repo_metadata.py  prompt_error_event.py  repo_agent_request.py  repo_agent_request_agent_inputs.py  repo_agent_request_overrides_type_0.py  repo_ask_request.py  repo_ask_response.py  repo_checkout_request.py  repo_clone_response.py  repo_cloned_file.py  repo_create_files_source.py  repo_create_git_source.py  repo_create_legacy_request.py  repo_create_legacy_request_metadata_type_0.py  repo_create_relace_source.py  repo_create_request.py  repo_create_request_metadata_type_0.py  repo_info.py  repo_log_item.py  repo_log_item_event_type.py  repo_metadata.py  repo_metadata_metadata_type_0.py  repo_pull_request.py  repo_retrieve_request.py  repo_retrieve_response.py  repo_retrieve_result.py  (+8 more)
(+33 files in other folders)
