[project]
name = "relace-agent-client"
version = "0.1.0"
description = "A client library for accessing Relace Agent"
authors = []
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0,<3",
]
[project.urls]
Homepage = "https://docs.relace.ai"
Issues = "https://github.com/squack-io/relace-sdk/issues"


[tool.uv.build-backend]
module-name = "relace_agent_client"
module-root = ""
data = ["CHANGELOG.md"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
